wealth_dist_notes

--- a/slides/geometric_series_fixed_points.ipynb
+++ b/slides/geometric_series_fixed_points.ipynb
@@ -143,14 +143,18 @@
         "\n",
         "-   For our simple linear map: $f(v) \\equiv y + \\beta v$\n",
         "\n",
-        "-   Iteration becomes $v_{n+1} = y + \\beta v_n$. Iterating backwards $$\n",
+        "-   Iteration becomes $v_{n+1} = y + \\beta v_n$. Iterating backwards \n",
+        "$$\n",
         "    v_{n+1} = y + \\beta v_n = y + \\beta y + \\beta^2 v_{n-1} = y \\sum_{i=0}^{n-1} \\beta^i + \\beta^n v_0\n",
         "    $$\n",
         "\n",
-        "    -   $\\sum_{i=0}^{n-1} \\beta^i = \\frac{1 - \\beta^n}{1 - \\beta}$ and\n",
+        "$\\sum_{i=0}^{n-1} \\beta^i = \\frac{1 - \\beta^n}{1 - \\beta}$ and\n",
         "        $\\sum_{i=0}^{\\infty} \\beta^i = \\frac{1}{1 - \\beta}$ if\n",
         "        $|\\beta| < 1$\n",
-        "    -   So $n \\to \\infty$, converges to $v = y/(1 - \\beta)$ for all\n",
+        "        \n",
+        "        \n",
+        "\n",
+        "So $n \\to \\infty$, converges to $v = y/(1 - \\beta)$ for all\n",
         "        $v_0$\n",
         "\n",
         "## Implementing with For Loop"
